--- a/themes/github-dev-page/layouts/partials/nav.html
+++ b/themes/github-dev-page/layouts/partials/nav.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href={{ .Site.Params.github}}>Github</a>
+                    <a class="page-scroll" href={{ .Site.Params.github}}>GitHub</a>
                 </li>
                 <li>
                     <a class="page-scroll" href={{ .Site.Params.linkedin }}>LinkedIn</a>
